// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default default: default 1`] = `
"
<a href=\\"akameco.github.io\\" target=\\"_blank\\">akameco</a>

      ↓ ↓ ↓ ↓ ↓ ↓

<a href=\\"akameco.github.io\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">akameco</a>;
"
`;

exports[`default has no rel: has no rel 1`] = `
"
<a href=\\"akameco.github.io\\" target=\\"_blank\\" rel=\\"\\">
  akameco
</a>

      ↓ ↓ ↓ ↓ ↓ ↓

<a href=\\"akameco.github.io\\" target=\\"_blank\\" rel=\\" noopener noreferrer\\">
  akameco
</a>;
"
`;

exports[`default has noopener only: has noopener only 1`] = `
"
<a href=\\"akameco.github.io\\" target=\\"_blank\\" rel=\\"noopener\\">
  akameco
</a>

      ↓ ↓ ↓ ↓ ↓ ↓

<a href=\\"akameco.github.io\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
  akameco
</a>;
"
`;

exports[`default has secure rel: has secure rel 1`] = `
"
<a href=\\"akameco.github.io\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
  akameco
</a>

      ↓ ↓ ↓ ↓ ↓ ↓

<a href=\\"akameco.github.io\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
  akameco
</a>;
"
`;

exports[`default href = variable: href = variable 1`] = `
"
<a href={externalLink} target=\\"_blank\\">akameco</a>

      ↓ ↓ ↓ ↓ ↓ ↓

<a href={externalLink} target=\\"_blank\\" rel=\\"noopener noreferrer\\">akameco</a>;
"
`;

exports[`default no-a-tag: no-a-tag 1`] = `
"
<div id=\\"hoge\\">hello</div>

      ↓ ↓ ↓ ↓ ↓ ↓

<div id=\\"hoge\\">hello</div>;
"
`;

exports[`default rel = variable: rel = variable 1`] = `
"
<a href=\\"akameco.github.io\\" target=\\"_blank\\" rel={val}>
  akameco
</a>

      ↓ ↓ ↓ ↓ ↓ ↓

<a href=\\"akameco.github.io\\" target=\\"_blank\\" rel={val}>
  akameco
</a>;
"
`;

exports[`default with other rel: with other rel 1`] = `
"
<a href=\\"akameco.github.io\\" target=\\"_blank\\" rel=\\"noopener prefetch\\">
  akameco
</a>

      ↓ ↓ ↓ ↓ ↓ ↓

<a href=\\"akameco.github.io\\" target=\\"_blank\\" rel=\\"noopener prefetch noreferrer\\">
  akameco
</a>;
"
`;
